test h2 db file clear at run_all_tests start